# nn-training-demo

./: main.py  minimal_pytorch_nn_training.ipynb  minimal_pytorch_nn_training_variations.ipynb  minimal_pytorch_nn_training_variations_house_prices.ipynb  mps.ipynb  pyproject.toml
