[project]
name = "nn-training-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.25.0",
]
